exercise 2 finished